# jira-gitlab-report

./: .editorconfig  .env.sample  .gitignore  AGENTS.md  README.md  TODO.md  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  reconciler.py  schema.sql  sse_client.py
tests/: raw_gitlab_mrs.json  raw_jira_issues.json  test_database.py  test_ingestion.py  test_reconciler.py
