[project]
name = "jira-gitlab-report"
version = "0.1.0"
description = "Deterministic Sprint Reporting Engine — pulls from Jira & GitLab MCP servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
